Fixes Z-index for footer

--- a/assets/css/sass/_style1/_style1-responsive.scss
+++ b/assets/css/sass/_style1/_style1-responsive.scss
@@ -9,6 +9,7 @@
 
     .nav-container {
         height: 100%;
+        z-index: 1;
     }
 
     nav {
