--- a/assets/css/style1/style1.css
+++ b/assets/css/style1/style1.css
@@ -120,6 +120,7 @@ footer {
 
   .nav-container {
     height: 100%;
+    z-index: 1;
   }
 
   nav {
